Updated firebahse handling issues

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                     <li><a href="#vehicle">Vehicle</a></li>
                 </ul>
             </nav>
+            <div class="debug-controls">
+                <button onclick="clearFirebaseDatabase()" class="debug-btn" title="Clear Database (Debug)">
+                    <i class="fas fa-database"></i>
+                </button>
+            </div>
         </div>
     </header>
 
