Feat2: Updated firebase handling issues

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 </ul>
             </nav>
             <div class="debug-controls">
+                <button onclick="testFirebaseConnection()" class="debug-btn" title="Test Firebase Connection">
+                    <i class="fas fa-wifi"></i>
+                </button>
                 <button onclick="clearFirebaseDatabase()" class="debug-btn" title="Clear Database (Debug)">
                     <i class="fas fa-database"></i>
                 </button>
