--- a/index.html
+++ b/index.html
@@ -7,41 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
-    <!-- Firebase SDK -->
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, addDoc, getDocs, onSnapshot, doc, updateDoc, deleteDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyBLIsi_VczMnVoKoNaHqJimZRHUv5QaZDc",
-            authDomain: "solar-truck-database.firebaseapp.com",
-            projectId: "solar-truck-database",
-            storageBucket: "solar-truck-database.firebasestorage.app",
-            messagingSenderId: "852200317885",
-            appId: "1:852200317885:web:c5bc1fb607f9d282bfa8d4"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-
-        // Make Firebase available globally
-        window.firebaseApp = app;
-        window.db = db;
-        window.firebaseFunctions = {
-            collection,
-            addDoc,
-            getDocs,
-            onSnapshot,
-            doc,
-            updateDoc,
-            deleteDoc,
-            query,
-            orderBy
-        };
-    </script>
+    <!-- GitHub-based data storage - no external dependencies needed -->
     
     <!-- PDF.js Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
@@ -62,14 +28,8 @@
                 </ul>
             </nav>
             <div class="debug-controls">
-                <button onclick="if(typeof testScriptLoaded === 'function') testScriptLoaded(); else alert('Script not loaded');" class="debug-btn" title="Test Script Loading">
-                    <i class="fas fa-code"></i>
-                </button>
-                <button onclick="if(typeof testFirebaseConnection === 'function') testFirebaseConnection(); else alert('Function not loaded yet');" class="debug-btn" title="Test Firebase Connection">
-                    <i class="fas fa-wifi"></i>
-                </button>
-                <button onclick="if(typeof clearFirebaseDatabase === 'function') clearFirebaseDatabase(); else alert('Function not loaded yet');" class="debug-btn" title="Clear Database (Debug)">
-                    <i class="fas fa-database"></i>
+                <button onclick="clearAllData()" class="debug-btn" title="Clear All Data">
+                    <i class="fas fa-trash"></i>
                 </button>
             </div>
         </div>
