Fix PDF links - reset to repository PDFs and add reset button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 </ul>
             </nav>
             <div class="debug-controls">
+                <button onclick="resetToRepositoryPDFs()" class="debug-btn" title="Reset to Repository PDFs">
+                    <i class="fas fa-file-pdf"></i>
+                </button>
                 <button onclick="clearAllData()" class="debug-btn" title="Clear All Data">
                     <i class="fas fa-trash"></i>
                 </button>
