Remove placeholder PDFs and add cross-device data sync system

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 </ul>
             </nav>
             <div class="debug-controls">
+                <button onclick="showSyncInstructions()" class="debug-btn" title="Show Sync Instructions">
+                    <i class="fas fa-sync"></i>
+                </button>
                 <button onclick="resetToRepositoryPDFs()" class="debug-btn" title="Reset to Repository PDFs">
                     <i class="fas fa-file-pdf"></i>
                 </button>
