--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
-    <!-- GitHub-based data storage - no external dependencies needed -->
+    <!-- Firebase SDK -->
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getFirestore, collection, addDoc, getDocs, onSnapshot, doc, updateDoc, deleteDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBLIsi_VczMnVoKoNaHqJimZRHUv5QaZDc",
+            authDomain: "solar-truck-database.firebaseapp.com",
+            projectId: "solar-truck-database",
+            storageBucket: "solar-truck-database.firebasestorage.app",
+            messagingSenderId: "852200317885",
+            appId: "1:852200317885:web:c5bc1fb607f9d282bfa8d4"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        // Make Firebase available globally
+        window.firebaseApp = app;
+        window.db = db;
+        window.firebaseFunctions = {
+            collection,
+            addDoc,
+            getDocs,
+            onSnapshot,
+            doc,
+            updateDoc,
+            deleteDoc,
+            query,
+            orderBy
+        };
+    </script>
     
     <!-- PDF.js Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
@@ -28,12 +62,6 @@
                 </ul>
             </nav>
             <div class="debug-controls">
-                <button onclick="showSyncInstructions()" class="debug-btn" title="Show Sync Instructions">
-                    <i class="fas fa-sync"></i>
-                </button>
-                <button onclick="resetToRepositoryPDFs()" class="debug-btn" title="Reset to Repository PDFs">
-                    <i class="fas fa-file-pdf"></i>
-                </button>
                 <button onclick="clearAllData()" class="debug-btn" title="Clear All Data">
                     <i class="fas fa-trash"></i>
                 </button>
