added script tag in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- PDF.js Library - CSP Safe Version -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    
+    <!-- Main Application Script -->
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- Header -->
