Fixed field issues

--- a/index.html
+++ b/index.html
@@ -314,6 +314,12 @@
                             <!-- Tasks will be dynamically loaded here -->
                         </div>
                     </div>
+                    <div class="task-category">
+                        <h4>Testing Tasks</h4>
+                        <div class="task-list" id="testingTasks">
+                            <!-- Tasks will be dynamically loaded here -->
+                        </div>
+                    </div>
                 </div>
                 <div class="add-task-section">
                     <h4>Add New Task</h4>
@@ -446,19 +452,19 @@
             <div class="vehicle-specs">
                 <div class="spec-item">
                     <h4>Solar Panel Capacity</h4>
-                    <p>500W</p>
+                    <p>stay tuned :></p>
                 </div>
                 <div class="spec-item">
                     <h4>Battery Capacity</h4>
-                    <p>2kWh</p>
+                    <p>stay tuned :></p>
                 </div>
                 <div class="spec-item">
                     <h4>Motor Power</h4>
-                    <p>1kW</p>
+                    <p>stay tuned :></p>
                 </div>
                 <div class="spec-item">
                     <h4>Range</h4>
-                    <p>50km</p>
+                    <p>stay tuned :></p>
                 </div>
             </div>
         </div>
