feat4 mobile layout fix

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Built by Students.<br>Driving Innovation. <br> Created by Team 13</h2>
-        </div>
-        <div class="hero-image">
-            <!-- Project Hub Button on the right side -->
+            <!-- Project Hub Button below the text -->
             <div class="hero-right-cta">
                 <button class="hero-project-hub-button" id="openProjectHubBtn">
                     <i class="fas fa-cogs"></i>
@@ -55,6 +53,8 @@
                     <small>Manage Links, Calendar, Plans & Tasks</small>
                 </button>
             </div>
+        </div>
+        <div class="hero-image">
         </div>
     </section>
 
