fixed centering of objects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h2>Built by Students.<br>Driving Innovation. <br> Created by Team 13</h2>
+            <h2>Built by Students.<br>Driving Innovation. <br> Created for Team 13</h2>
             <!-- Project Hub Button below the text -->
             <div class="hero-right-cta">
                 <button class="hero-project-hub-button" id="openProjectHubBtn">
@@ -428,14 +428,14 @@
                     <h4>Rishikesh</h4>
                     <p>Design/Mechanical & Electrical</p>
                 </div>
-                <div class="team-member" style = 'position:relative; left: 180%;'>
+                <div class="team-member">
                     <div class="member-avatar">
                         <i class="fas fa-user"></i>
                     </div>
                     <h4>Yi Zheng</h4>
                     <p>Design/Mechanical & Electrical</p>
                 </div>
-                <div class="team-member" style = 'position:relative; left: 180%;'>
+                <div class="team-member">
                     <div class="member-avatar">
                         <i class="fas fa-user"></i>
                     </div>
@@ -472,7 +472,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Solar Truck Project - DPST1071. All rights reserved.</p>
+            <p>&copy; orangecrab13 - Sebastian Von Viray. All rights reserved.</p>
         </div>
     </footer>
 
