Added parts order list and payment tracking in project hub

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
                     </div>
                     <div class="task-category">
-                        <h4>Procurement Tasks</h4>
+                        <h4>Payment Tracking</h4>
                         <div class="task-list" id="procurementTasks">
                             <!-- Tasks will be dynamically loaded here -->
                         </div>
@@ -315,7 +315,7 @@
                         </div>
                     </div>
                     <div class="task-category">
-                        <h4>Testing Tasks</h4>
+                        <h4>Parts Order List</h4>
                         <div class="task-list" id="testingTasks">
                             <!-- Tasks will be dynamically loaded here -->
                         </div>
@@ -328,9 +328,9 @@
                         <select id="taskCategory" required>
                             <option value="">Select Category</option>
                             <option value="design">Design Tasks</option>
-                            <option value="procurement">Procurement Tasks</option>
+                            <option value="procurement">Payment Tracking</option>
                             <option value="assembly">Assembly Tasks</option>
-                            <option value="testing">Testing Tasks</option>
+                            <option value="testing">Parts Order List Tasks</option>
                         </select>
                         <button type="submit">Add Task</button>
                     </form>
